force-app/main/default/objects/Address__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Created for Search based on account Name</description>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>