force-app/main/default/objects/Address__c/fields/Account_Name_For__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_For__c</fullName>
    <formula>Account__r.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>