force-app/main/default/objects/Address__c/fields/Check_Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Check_Billing_Type__c</fullName>
    <formula>INCLUDES(AddressType__c, &apos;Billing&apos;)</formula>
    <label>Check Billing Type</label>
    <type>Checkbox</type>
</CustomField>