force-app/main/default/objects/Address__c/fields/GSTApplicable__c.field-meta.xml
<CustomField>
    <fullName>GSTApplicable__c</fullName>
    <label>GST Applicable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>