force-app/main/default/objects/Address__c/fields/GSTIN__c.field-meta.xml
<CustomField>
    <fullName>GSTIN__c</fullName>
    <inlineHelpText>Total Length 15 without Space.
2 numbers, 5 alphabets, 4 numbers, 1 alphabet, 1 Number, 1 alphabet, 1 alphanumeric character</inlineHelpText>
    <label>GSTIN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>