force-app/main/default/objects/Address__c/fields/isPartner__c.field-meta.xml
<CustomField>
    <fullName>isPartner__c</fullName>
    <description>Created by Nandish for Integration Trigger point</description>
    <formula>Account__r.Is_Ready_for_Integration__c</formula>
    <inlineHelpText>DO NOT ADD TO LAYOUT</inlineHelpText>
    <label>Is Ready for Integration</label>
    <type>Checkbox</type>
</CustomField>