force-app/main/default/objects/Address__c/fields/Send_To_API_Layer__c.field-meta.xml
<CustomField>
    <fullName>Send_To_API_Layer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to kafka</label>
    <type>Checkbox</type>
</CustomField>