force-app/main/default/objects/Address__c/fields/SEZ__c.field-meta.xml
<CustomField>
    <fullName>SEZ__c</fullName>
    <label>SEZ</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Indian</fullName>
                <isActive>false</isActive>
                <label>Indian</label>
            </value>
            <value>
                <fullName>International</fullName>
                <isActive>false</isActive>
                <label>International</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>