force-app/main/default/objects/Address__c/fields/State_Name__c.field-meta.xml
<CustomField>
    <fullName>State_Name__c</fullName>
    <formula>State2__r.Name</formula>
    <label>State</label>
    <type>Text</type>
</CustomField>