force-app/main/default/objects/Address__c/validationRules/GST_IN_FORMAT.validationRule-meta.xml
<ValidationRule>
    <fullName>GST_IN_FORMAT</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(GSTIN__c )),
NOT( REGEX( GSTIN__c , &quot;[0-9]{2}[A-Za-z]{5}[0-9]{4}[A-z]{1}[0-9]{1}[A-z]{1}[a-zA-Z0-9]{1}&quot;) )
)</errorConditionFormula>
    <errorDisplayField>GSTIN__c</errorDisplayField>
    <errorMessage>Please enter valid GSTIN</errorMessage>
</ValidationRule>