force-app/main/default/objects/Address__c/validationRules/GST_Number_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>GST_Number_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
  ISPICKVAL( GSTApplicable__c , &apos;Yes&apos; ),
  ISBLANK(  GSTIN__c  )
),
AND(
ISPICKVAL( GSTApplicable__c , &apos;No&apos; ),
  NOT(ISBLANK(  GSTIN__c  ))
))</errorConditionFormula>
    <errorDisplayField>GSTIN__c</errorDisplayField>
    <errorMessage>Cannot Modified GST Number</errorMessage>
</ValidationRule>