force-app/main/default/objects/Address__c/validationRules/Postal_Code_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Postal_Code_Format</fullName>
    <active>true</active>
    <description>SR-0208 Can contain 0-9, A-Z &amp; a-z only (no space allowed as well)</description>
    <errorConditionFormula>NOT(REGEX(PostalCode__c, &quot;^[1-9][0-9]{5}&quot;)) &amp;&amp;  ISPICKVAL(Country__c  , &apos;IN&apos;)</errorConditionFormula>
    <errorMessage>Postal Code should in valid format</errorMessage>
</ValidationRule>