force-app/main/default/objects/Address__c/validationRules/State_and_Country_cannot_be_modified.validationRule-meta.xml
<ValidationRule>
    <fullName>State_and_Country_cannot_be_modified</fullName>
    <active>true</active>
    <description>State and country modifications may lead to issues in GST computations in SAP. Hence restricting their modifications once created.</description>
    <errorConditionFormula>AND(
 NOT(ISNEW()),
 OR(
  ISCHANGED( State2__c ),
  ISCHANGED( Country__c )
 )
)</errorConditionFormula>
    <errorMessage>State and country cannot be modified. Please create a new Address record.</errorMessage>
</ValidationRule>